--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,35 @@
 <!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<div class="container">
+    <p class="h2">Contact</p>
+    <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent
+        commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    <span class="border">
+        <div class="row justify-content-center">
+
+
+            <form class="col-9 ">
+                <div class="form-group row">
+                    <label for="colFormLabel" class="col-sm-2 col-form-label">Your E-mail</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="colFormLabel" placeholder="Your email">
+                    </div>
+                </div>
+                <br>
+                <div class="form-group row">
+                    <label for="colFormLabel" class="col-sm-2 col-form-label" >Your Message</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="colFormLabel"
+                            placeholder="Please enter your message here...">
+                    </div>
+                </div>
+                <br>
+                <div class="d-flex flex-row-reverse bd-highlight">
+                    <button type="button" class="btn btn-primary">
+                        Submit
+                    </button>
+                </div>
+            </form>
+        </div>
+    </span>
+    <br>
+</div>
