--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,40 +1,45 @@
 <!-- your html code here -->
 
-
 <div class="container">
     <h1>Portafolio</h1>
     <p class="fs-4">Note that we don’t provide utility classes for justified text. While, aesthetically, justified text
         might look more appealing, it does make word-spacing more random and therefore harder to read.</p>
-    <div class="row" >
+    <div class="row">
         <div class="col-4">
-            <div class="card d-flex justify-content-start"  style="width:28rem;">
-                <img src="https://i.pinimg.com/564x/38/6b/3d/386b3d57df9f613c89ff1c0d6e003676.jpg"  style= "width:28rem; height: 20rem;" class="card-img-top" >
+            <div class="card d-flex justify-content-start " style="width:25rem;">
+                <img src="https://i.pinimg.com/564x/38/6b/3d/386b3d57df9f613c89ff1c0d6e003676.jpg"
+                    style="width:25rem; height: 15rem;" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Project Name</h5>
+                    <h5 class="card-title" style="color:#0d6efd;">Project Name</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
                 </div>
             </div>
         </div>
         <div class="col-4">
-            <div class="card d-flex justify-content-center"style="width: 28rem; " >
-                <img src="https://i.pinimg.com/564x/38/6b/3d/386b3d57df9f613c89ff1c0d6e003676.jpg" style= "width:28rem;  height: 20rem;" class="card-img-top">
+            <div class="card d-flex justify-content-center" style="width: 25rem; ">
+                <img src="https://i.pinimg.com/564x/38/6b/3d/386b3d57df9f613c89ff1c0d6e003676.jpg"
+                    style="width:25rem;  height: 15rem;" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Project Name</h5>
+                    <h5 class="card-title" style="color:#0d6efd;">Project Name</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
                 </div>
             </div>
         </div>
         <div class="col-4">
-            <div class="card d-flex justify-content-end" style="width: 28rem; ">
-                <img src="https://i.pinimg.com/564x/38/6b/3d/386b3d57df9f613c89ff1c0d6e003676.jpg" style= "width:28rem;  height: 20rem;" class="card-img-top">
+            <div class="card d-flex justify-content-end " style="width: 25rem;">
+                <img src="https://i.pinimg.com/564x/38/6b/3d/386b3d57df9f613c89ff1c0d6e003676.jpg"
+                    style="width:25rem;  height: 15rem;" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Project Name</h5>
+                    <h5 class="card-title" style="color:#0d6efd;">Project Name</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
                 </div>
             </div>
         </div>
     </div>
+</div>
+<div class="container">
+    <hr>
 </div>
