--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,14 +1,17 @@
-<div class="container d-flex flex-row bg-white mb-3">
+<div class="container d-flex flex-row bg-grey mb-3">
     
+    <div>
         <div class="d-flex flex-row">
             <p class="h1"><b>The First Heading</b></p>
-            <p class="h1 text-secondary ms-2">Will catch your eye</p>
-                    <p> Drilsgerigwerifbgiwerfbiuerfbuierfbuibvuierfbvuivebncvuiernrcuierfbvuiwerbvui
-                        ceuibfwvyuuubuhbuefbvuinidjcnekcnmioqwedkoqwpekfowepfkqwe09fke09fk9kqe09kqe09fk
-                        iqeufnqweuifnqeuifmcnqeiofmcqeiocmfqeiomcqeroi.</p>
+            <p class="h1 text-secondary ms-2"><b>Will catch your eye</b></p>
         </div>
+        <p>Latin words, combined with a handful of model sentence structures, 
+            to generate Lorem Ipsum which looks reasonable. 
+            The generated Lorem Ipsum is therefore always free from repetition, 
+            injected humour, or non-characteristic words etc.</p>
+    </div>
 
                     <div>
-                        <img class="rounded-circle end" src="assets/img/1.jpg" alt="...">
+                        <img class="rounded-circle end mw-100" src="assets/img/1.jpg" alt="...">
                     </div>
 </div>
